Version 1.0.3
Security Fixes
Removed Simple Author Box from recommended plugins
Update Icons

Version 1.0.2
Improved accesibility with keyboard navigation

Version 1.0.1
Added compatibility with Kali Forms plugin

Version 1.0.0
Theme release!