@@ -7,7 +7,7 @@
 				$kaliformsContainer = control.container.find('.cpotheme_contact_control__kali-forms');
 
 			$kaliformsContainer.find('select').change(function() {
-				var val = $( this ).val();
+				var val = jQuery( this ).val();
 				control.settings.plugin_select( 'kali-forms' );
 				control.settings.form_id( val );
 			});
@@ -16,7 +16,7 @@
 
 	} );
 
-	$.extend( api.controlConstructor, {
+	jQuery.extend( api.controlConstructor, {
 		'antreas-contactform-control': api.AntreasContactFormControl,
     });
 
